[gd_scene load_steps=4 format=3 uid="uid://dtal3hlb6dajv"]

[ext_resource type="Theme" uid="uid://bfjfjpdmxcwel" path="res://ui/themes/menuTheme.tres" id="1_hv7dm"]
[ext_resource type="Script" uid="uid://bcbxlyue6ggux" path="res://ui/menus/pause_menu.gd" id="2_w225i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hv7dm"]
bg_color = Color(0, 0, 0, 0.203922)

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_hv7dm")
script = ExtResource("2_w225i")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hv7dm")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 400
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 400
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Continue" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "CONTINUE"

[node name="Control" type="Control" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="Options" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "OPTIONS"

[node name="Control3" type="Control" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="Reset" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "RESETLEVEL"

[node name="Control2" type="Control" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="Exit" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "EXIT"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
